--- a/companies-crud-qa.yml
+++ b/companies-crud-qa.yml
@@ -1,6 +1,7 @@
 db:
-  url: jdbc:postgresql://localhost:5433/companies-qa
-  username: admin-qa
-  password: admin-qa
-  connection-timeout: 20000
+  username: debuggeandoideas
   maximum-pool-size: 5
+  connection-timeout: 20000
+  jdbc: postgresql://localhost:5432/companies-qa
+  password: udemy
+  driverClassName: org.postgresql.Driver
