--- a/companies-crud.yml
+++ b/companies-crud.yml
@@ -1,6 +1,7 @@
 db:
-  url: jdbc:postgresql://localhost:5432/companies
-  username: admin
-  password: admin
-  connection-timeout: 20000
+  username: debuggeandoideas
   maximum-pool-size: 5
+  connection-timeout: 20000
+  url: jdbc:postgresql://localhost:5432/companies
+  password: udemy
+  driverClassName: org.postgresql.Driver
