--- a/companies-crud-prod.yml
+++ b/companies-crud-prod.yml
@@ -1,5 +1,5 @@
 db:
-  url: jdbc:postgresql://db-companies:5432/companies-prod
+  url: jdbc:postgresql://db-companies:5432/companies
   username: admin
   password: admin
   connection-timeout: 20000
